--- a/README
+++ b/README
@@ -1,39 +1,50 @@
-NAME
-    Mojolicious::Command::Generate::Lexicon - Generate Lexicon Command
+=head1 NAME
 
-SYNOPSIS
-        $ ./script/my_mojolicious_app generate lexicon [language]
-            [--behavior=save||reset] [templates]
+Mojolicious::Command::Generate::Lexicon - Generate Lexicon Command
 
-    Or as perl module
+=head1 SYNOPSIS
 
-        use Mojolicious::Command::Generate::Lexicon;
+    $ ./script/my_mojolicious_app generate lexicon [language]
+        [--behavior=save||reset] [templates]
 
-        my $l = Mojolicious::Command::Generate::Lexicon->new;
-        $inflate->run($language, @files);
+Or as perl module
 
-SEE ALSO
-    MojoX::I18N::Lexemes
+    use Mojolicious::Command::Generate::Lexicon;
 
-SUPPORT
-  IRC
-        #ru.pm on irc.perl.org
+    my $l = Mojolicious::Command::Generate::Lexicon->new;
+    $inflate->run($language, @files);
 
-DEVELOPMENT
-  Repository
-        http://github.com/und3f/mojolicious-lexicon
 
-AUTHOR
-    Sergey Zasenko, "undef@cpan.org".
+=head1 SEE ALSO
 
-CREDITS
-    In alphabetical order
+L<MojoX::I18N::Lexemes>
 
-      Silvio
+=head1 DEVELOPMENT
 
-COPYRIGHT
-    Copyright (C) 2011, Sergey Zasenko
+=head2 Repository
 
-    This program is free software, you can redistribute it and/or modify it
-    under the terms of the Artistic License version 2.0.
+    http://github.com/und3f/mojolicious-lexicon
+
+=head1 AUTHOR
+
+Sergey Zasenko, C<undef@cpan.org>.
+
+=head1 CREDITS
+
+In alphabetical order
+
+=over 2
+
+Silvio
+
+Tetsuya Tatsumi
+
+=back
+
+=head1 COPYRIGHT
+
+Copyright (C) 2015, Sergey Zasenko
+
+This program is free software, you can redistribute it and/or modify it
+under the terms of the Artistic License version 2.0.
 
