--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 =head1 NAME
 
-Mojolicious::Command::Generate::Lexicon - Generate Lexicon Command
+Mojolicious::Command::generate::lexicon - Generate Lexicon Command
 
 =head1 SYNOPSIS
 
@@ -9,9 +9,9 @@ Mojolicious::Command::Generate::Lexicon - Generate Lexicon Command
 
 Or as perl module
 
-    use Mojolicious::Command::Generate::Lexicon;
+    use Mojolicious::Command::generate::lexicon;
 
-    my $l = Mojolicious::Command::Generate::Lexicon->new;
+    my $l = Mojolicious::Command::generate::lexicon->new;
     $inflate->run($language, @files);
 
 
