--- a/README.pod
+++ b/README.pod
@@ -43,7 +43,7 @@ Tetsuya Tatsumi
 
 =head1 COPYRIGHT
 
-Copyright (C) 2015, Sergey Zasenko
+Copyright (C) 2011-2016, Sergey Zasenko
 
 This program is free software, you can redistribute it and/or modify it
 under the terms of the Artistic License version 2.0.
